--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,102 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500;800;900&display=swap");
+body {
+  background-color: #121725;
+}
 
+.logo {
+  position: absolute;
+  left: 150px;
+  top: 100px;
+}
+
+.card {
+  background-color: #121725;
+  width: 522px;
+  padding: 70px;
+  position: absolute;
+  left: 68px;
+  top: 285px;
+}
+
+.titre-1 {
+  font-family: "Raleway", sans-serif;
+  font-weight: lighter;
+  color: #54E6AF;
+  font-size: 50px;
+  margin: auto;
+}
+
+.titre-2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: lighter;
+  font-size: 50px;
+  color: #FFFFFF;
+  margin: auto;
+}
+
+.text {
+  font-family: "Roboto", sans-serif;
+  color: #5A668A;
+  padding-right: 172px;
+  margin-top: 35px;
+  margin-bottom: 35px;
+  font-size: 15px;
+}
+
+.form {
+  font-family: "Roboto", sans-serif;
+}
+
+#email {
+  height: 35px;
+  width: 348px;
+  border-radius: 50px;
+  color: #C2CBE5;
+  background-color: #2C344B;
+  border: none;
+  padding-left: 10px;
+  position: absolute;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.submit {
+  height: 35px;
+  border-radius: 50px;
+  position: relative;
+  left: 253px;
+  border: none;
+  background-color: #54E6AF;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.submit:hover {
+  background-color: #FFE6AF;
+  transition: 1s;
+}
+
+.img-fond {
+  position: relative;
+  z-index: -2;
+  left: 545px;
+  top: 126px;
+}
+
+.pattern-dot {
+  position: relative;
+  z-index: -1;
+  left: 300px;
+  top: 186px;
+}
+
+.bloc-icone {
+  margin-top: 30px;
+}
+
+.icone {
+  padding: 10px;
+  width: 50px;
+  color: #5A668A;
+}
 
 /*# sourceMappingURL=style.css.map */
